GreasePencil: Modifying name of new color in new palette segfaults #50123

Closed
opened 2016-11-27 00:15:11 +01:00 by Folkert de Vries · 6 comments

System Information
Linux Mint (Ubuntu)

Blender Version
Broken: 2.78 729affe

Short description of error
Grease Pencil Palettes are not linked to the scene, renaming their colors' names segfaults

Exact steps for others to reproduce the error

  • open a fresh blend file
  • create a new grease pencil data block (or "New Layer", doesn't change the result)
  • crucial fact is that there is no palette linked to the grease pencil data-block
  • paste the following two lines into the console
scene = bpy.context.scene
palette = scene.grease_pencil.palettes.active or scene.grease_pencil.palettes.new("GP_Palett")
  • observe how the newly created palette is not visible in the UI
  • change the name of a color by executing
mycolor = palette.colors.new()

# this expression segfaults
mycolor.name = "test"

Crucially, changing the hide property doesn't segfault, so name seems to be special.

This segfault is probably only possible via scripting, but still very bad. It was discovered during my work on the Freestyle GPencil Exporter.

**System Information** Linux Mint (Ubuntu) **Blender Version** Broken: 2.78 729affe **Short description of error** Grease Pencil Palettes are not linked to the scene, renaming their colors' names segfaults **Exact steps for others to reproduce the error** * open a fresh blend file * create a new grease pencil data block (or "New Layer", doesn't change the result) * crucial fact is that there is no palette linked to the grease pencil data-block * paste the following two lines into the console ``` scene = bpy.context.scene palette = scene.grease_pencil.palettes.active or scene.grease_pencil.palettes.new("GP_Palett") ``` * observe how the newly created palette is not visible in the UI * change the name of a color by executing ``` mycolor = palette.colors.new() # this expression segfaults mycolor.name = "test" ``` Crucially, changing the `hide` property doesn't segfault, so `name` seems to be special. This segfault is probably only possible via scripting, but still very bad. It was discovered during my work on the Freestyle GPencil Exporter.
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @flokkievids

Added subscriber: @flokkievids
Member

Added subscriber: @JoshuaLeung

Added subscriber: @JoshuaLeung
Member

Actually, even just trying to print the mycolor variable (before changing the name) caused a crash in current master.

I previously fixed a bug where this was crashing because a name-setting function here needed the owner-datablock, but that wasn't supplied when accessing this stuff from the context.

Actually, even just trying to print the `mycolor` variable (before changing the name) caused a crash in current master. I previously fixed a bug where this was crashing because a name-setting function here needed the owner-datablock, but that wasn't supplied when accessing this stuff from the context.

This issue was referenced by e2d223461e

This issue was referenced by e2d223461efeea4792defb254c692828266478d1
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#50123
No description provided.